# ROECS

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindCSparse.cmake
include/: camera.h  initializer.h
include/camera/: camera.h
include/frame/: frame.h  frame_pair.h
include/initializer/: initializer.h
include/loader/: frame_loader.h
include/optimizer/: direct_binary_edge.h  direct_unary_edge.h  inverse_depth_edge.h  surround_optimizer.h
include/selection/: pixel_selection.h  selection_util.h
include/surround/: surround_view_system.h
include/utils/: utils.h
main/: CMakeLists.txt  main_pipeline.cpp  online_correction.cpp
src/: CMakeLists.txt  camera.cpp  initializer.cpp
src/camera/: camera.cpp
src/frame/: frame.cpp  frame_pair.cpp
src/initializer/: initializer.cpp
src/loader/: frame_loader.cpp
src/optimizer/: surround_optimizer.cpp
src/selection/: pixel_selection.cpp
src/surround/: surround_utils.h  surround_view_system.cpp  utils.h
src/utils/: utils.cpp
test/: CMakeLists.txt  all_OECS.cpp  all_surround_view_test.cpp  direct_unary_edge_test.cpp  frame_loader_test.cpp  homography_test.cpp  initializer_test.cpp  inverse_depth_test.cpp  lk_test.cpp  matcher_test.cpp  offline_baseline_test.cpp  photometric_error_test.cpp  surround_multi_test.cpp  surround_view_test.cpp  variance_test.cpp
